--- a/code/transformers_exercise.ipynb
+++ b/code/transformers_exercise.ipynb
@@ -1322,12 +1322,12 @@
         "print(results)"
       ],
       "metadata": {
-        "id": "wnE4tyN3mu6I",
-        "outputId": "b35b3d6c-5b9f-46e8-d9b7-73a862006fea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "id": "wnE4tyN3mu6I",
+        "outputId": "b35b3d6c-5b9f-46e8-d9b7-73a862006fea"
       },
       "execution_count": 53,
       "outputs": [
@@ -1364,12 +1364,12 @@
         "y_pred = trainer.predict(val_dataset).predictions"
       ],
       "metadata": {
-        "id": "DDmXwDnWnBHf",
-        "outputId": "870d389f-7481-498e-fc05-ac493a159a69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "DDmXwDnWnBHf",
+        "outputId": "870d389f-7481-498e-fc05-ac493a159a69"
       },
       "execution_count": 54,
       "outputs": [
@@ -1394,11 +1394,11 @@
         "y_pred_res.shape"
       ],
       "metadata": {
-        "id": "gOqu18TzYksA",
-        "outputId": "770e086a-f6de-4019-ec35-bd6b15d729fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gOqu18TzYksA",
+        "outputId": "770e086a-f6de-4019-ec35-bd6b15d729fd"
       },
       "execution_count": 57,
       "outputs": [
@@ -1421,11 +1421,11 @@
         "len(y_val), len(y_pred_fin)"
       ],
       "metadata": {
-        "id": "NpN7HX9OnDmp",
-        "outputId": "43bae7f6-bc80-4c6f-cabb-9edeceb67e3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NpN7HX9OnDmp",
+        "outputId": "43bae7f6-bc80-4c6f-cabb-9edeceb67e3f"
       },
       "execution_count": 66,
       "outputs": [
@@ -1447,11 +1447,11 @@
         "print(classification_report(y_val, y_pred_fin))"
       ],
       "metadata": {
-        "id": "yGYcc8XGmwrF",
-        "outputId": "6ebf0bce-9f7c-460b-e841-1216622eff64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yGYcc8XGmwrF",
+        "outputId": "6ebf0bce-9f7c-460b-e841-1216622eff64"
       },
       "execution_count": 67,
       "outputs": [
@@ -1487,12 +1487,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "6bQbaZRfm0bh",
-        "outputId": "54fae8cf-1644-4a40-b5b4-8f8ee947d783",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "6bQbaZRfm0bh",
+        "outputId": "54fae8cf-1644-4a40-b5b4-8f8ee947d783"
       },
       "execution_count": 71,
       "outputs": [
@@ -1507,6 +1507,33 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusions\n",
+        "\n",
+        "Este modelo nos permitio enfocarnos en hacer un analisis comparativo sobre el entrenamiento y los resultados de entrenar un modelo desde 0 en relacion a un finetuning de un modelo ya existente, dando como resultado una mejora en el accuracy de por lo menos 10%.\n",
+        "\n",
+        "\n",
+        "Usando metricas basicas es posible ver que las diferencias son significativamente favorables para el modelo de finetuning.\n",
+        "\n",
+        "En cuanto el proceso, los dos tienen ventajas y desventajas que nivelan la complejidad de llegar a un resultado, es decir no se ve una diferencia sustancial en que tan complejo es realizar el proceso de entrenamiento de modelos como LSTM o hacer finetuning a este modelo especifico.\n",
+        "\n",
+        "En cuanto a uso de recursos, hacer finetuning de un modelo, consume sin dudas muchos mas recursos."
+      ],
+      "metadata": {
+        "id": "-AkHbx7raPyK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hYpQBhBka2Ew"
+      },
+      "execution_count": 71,
+      "outputs": []
     }
   ],
   "metadata": {
